# claudeSam

./: Cargo.toml  README.md  config.example.toml
src/: main.rs
src/api/: mod.rs
src/config/: mod.rs
src/engine/: mod.rs
src/kairos/: auto_dream.rs  brain.rs  config_file.rs  consolidation.rs  daemon.rs  daemonize.rs  daily_log.rs  memdir.rs  mod.rs  notify.rs  server.rs  ultraplan.rs  webhook.rs
src/memory/: mod.rs
src/tools/: mod.rs
src/tools/bash/: mod.rs
src/tools/file/: mod.rs
src/tools/grep/: mod.rs
src/tui/: mod.rs
