[package]
name = "claude-sam"
version = "0.2.0"
edition = "2024"
description = "🦊 Sam - Rust AI Agent with KAIROS"
authors = ["Paul Yu <yhc007@gmail.com>"]
repository = "https://github.com/yhc007/claudeSam"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
filetime = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "sam"
path = "src/main.rs"
